--- a/css/cake.css
+++ b/css/cake.css
@@ -16,16 +16,16 @@ html, body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background:#006782; 
+  background:mistyrose; 
   font-family:Georgia, 'Times New Roman', Times, serif;
-  color: #F1DAB6;
+  color: #c78d30;
 }
 
 #topBar {
   width: 100%;
   height: 40px;
   background: #1a1a1a;
-  border-bottom: 2px solid #EE1857;
+  border-bottom: 3px solid #267a8f;
   display: flex;
   align-items: center;
   padding: 0 1rem;
@@ -41,7 +41,7 @@ html, body {
 #clickArea {
   width: 28%;
   padding: 1rem;
-  border-right: 2px solid #EE1857;
+  border-right: 5px solid #267a8f;
 }
 /* Middle */
 #upgradeArea {
@@ -53,7 +53,7 @@ html, body {
 #rewardArea {
   width: 300px;
   padding: 1rem;
-  border-left: 2px solid #EE1857;
+  border-left: 5px solid #267a8f;
   overflow-y: auto;
 }
 .separator {
@@ -83,4 +83,5 @@ html, body {
     flex: 1;
   }
 }
+
 
