--- a/css/cake.css
+++ b/css/cake.css
@@ -24,8 +24,10 @@ html, body {
 #topBar {
   width: 100%;
   height: 40px;
-  background: #1a1a1a;
-  border-bottom: 3px solid #267a8f;
+  background: ffe4e1;
+  padding: 20px;
+  padding-bottom: 20px;
+  margin: 10px;
   display: flex;
   align-items: center;
   padding: 0 1rem;
@@ -73,6 +75,21 @@ html, body {
   width: 280px;
   height: auto;
   display: block;
+}
+
+button {
+  background-color: rgb(255, 163, 178);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 12px 20px;
+  margin: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 15px;
+}
+
+button:hover {
+  background-color: rgb(252, 179, 191);
 }
 
 @media screen and (max-width: 1100px) {
