--- a/css/cake.css
+++ b/css/cake.css
@@ -92,6 +92,11 @@ button:hover {
   background-color: rgb(252, 179, 191);
 }
 
+#selections {
+  display: flex;
+  flex-direction: column;
+}
+
 @media screen and (max-width: 1100px) {
   #clickArea, #rewardArea {
     display: none;
