--- a/css/cake.css
+++ b/css/cake.css
@@ -97,6 +97,17 @@ button:hover {
   flex-direction: column;
 }
 
+.rewardUnlocked {
+  opacity: 0;
+  transition: all 0.5s ease;
+  transform: scale(0.8);
+}
+
+.rewardUnlocked.unlocked {
+  color: #FF69B4;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 1100px) {
   #clickArea, #rewardArea {
     display: none;
